--- a/test/src/arcelik-test-scss/style.scss
+++ b/test/src/arcelik-test-scss/style.scss
@@ -24,4 +24,5 @@
 @import 'Components/Pages';
 @import 'Components/Search';
 @import 'Components/Mrt';
+@import 'Components/Buying-Guide';
 @import 'Components/IE-fix';
