--- a/test/src/arcelik-test-scss/Components/Product-Detail.scss
+++ b/test/src/arcelik-test-scss/Components/Product-Detail.scss
@@ -1380,7 +1380,7 @@ a.btn-all-technology {
                 @include outer-block;
             }
             .col-text {
-                padding: 15px $padding1 0 $padding2 !important;
+                padding: 15px $padding1 15px $padding2 !important;
             }
             .title {
                 font-size: 44px;
