--- a/test/src/arcelik-test-scss/Components/Buying-Guide.scss
+++ b/test/src/arcelik-test-scss/Components/Buying-Guide.scss
@@ -1,9 +1,14 @@
-.html5-video-container{
-  .video-stream.html5-main-video{
-      height:600px !important;
-    }
-}
 .page-buying-guide{
+  .ems-full{
+    &.acc-bg-gri{
+      background: #ebebeb !important;
+    }
+  }
+  .html5-video-container{
+    .video-stream.html5-main-video{
+        height:600px !important;
+      }
+  }
   .band-items{
     background: #fff;
   }
@@ -33,6 +38,8 @@
     }
     p{
       font-size:14px;
+      font-weight: 300;
+      line-height: 1.3;
     }
   }
   .buying-icons{
@@ -60,7 +67,6 @@
     }
     .swiper-content{
       top:75% !important;
-      transform: translateY(-75%);
       .title{
         width:100%;
       }
@@ -88,7 +94,7 @@
     direction: ltr;
     .col-img{
       background: #d7d7d7;
-        padding:20px 0px;
+        padding:0px;
     }
       .col-text{
         padding-right:13%;
@@ -135,6 +141,13 @@
   }
   .buying-video{
     height:auto;
+    .swiper-content{
+      top:85% !important;
+      .title{
+        width:100%;
+        font-size:21px;
+      }
+    }
   }
 }
 
