--- a/test/src/arcelik-test-scss/Components/Product-List.scss
+++ b/test/src/arcelik-test-scss/Components/Product-List.scss
@@ -690,13 +690,12 @@ $row-5-outer: 20px;
         > b {
             font-family: $fontDefault;
             font-size: 11px;
-            /*color: #9d6948;*/
             color: #333333;
             font-weight: 700;
             /*letter-spacing: 2px;*/
             letter-spacing: .6px;
             > .paroFiyat{
-                /*color: #ed1c24;*/
+                color:#ED1C24;
                 font-family: $fontSite2;
                 font-weight: 500;
             }
