--- a/test/src/arcelik-test-scss/Components/Search.scss
+++ b/test/src/arcelik-test-scss/Components/Search.scss
@@ -1,3 +1,102 @@
+/* Search Revize Başlangıç */
+.button__text{
+  margin:10px 10px 0px 10px;
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    border: 3px solid #ED1C24;
+    background: #ED1C24;
+    padding: 11px 20px;
+    font-family: "Heron";
+    font-size: 12px;
+    color: #fff;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    text-decoration: none;
+    -webkit-transition: all 0.32s ease;
+    -o-transition: all 0.32s ease;
+    transition: all 0.32s ease;
+}
+svg.button__spinner{
+  display: none;
+}
+.js-search-load-more{
+  &.loading{
+    svg.button__spinner{
+      display: block;
+      background-repeat: no-repeat !important;
+      z-index: 9999;
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      background: rgba(255,255,255,0.8);
+      background-image: url("https://www.arcelik.com.tr/images/ajaxtabs/loading.gif");
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      background-size: auto;
+      background-position: center;
+    }
+  }
+}
+.search-results__inner{
+   .search-no-result{
+      font-size:20px;
+      border:1px solid red;
+      color:red;
+    }
+  }
+.search-focused{
+    .search-results{
+      display: block;
+    }
+}
+.search-results{
+  display: none;
+}
+.search-results__category:nth-child(2){
+    .search-results__category__list__image{
+      border:inherit;
+      padding: 0px;
+    }
+  }
+.search-results__category{
+  padding:20px 30px;
+  .search-results__category__header{
+    span{
+      display: inline-block;
+      font-size:16px;
+      color:#666;
+    }
+  }
+    .search-results__category__list__wrapper{
+      display: flex;
+      align-items: center;
+      border-bottom: 1px solid #ddd;
+      padding: 10px;
+      &:hover{
+        background: #ddd;
+      }
+    }
+    .search-results__category__list__image{
+      border:1px solid #ddd;
+      padding: 5px;
+    }
+    .search-results__category__list__content{
+      margin-left:10px;
+      h5{
+        font-size:20px;
+        font-weight: bold;
+      }
+      p{
+        display: none !important;
+      }
+    }
+  }
+/* Search Revize Bitiş */
+
 // Header Search
 .mod-mini-search {
     float: right;
@@ -24,7 +123,7 @@
                 }
                 .submit {
                     position: absolute;
-                    bottom: 0;
+                    top: 0;
                     right: 0;
                     pointer-events: none;
                     a.btnArama {
@@ -63,7 +162,7 @@
             background: #fff;
             position: relative;
             width: 100%;
-            min-height: 430px;  
+            min-height: 430px;
             padding: 25px 70px 30px 70px;
             & > div {
                 max-width: 300px;
@@ -329,7 +428,7 @@
             @include outer-mobile;
             margin-bottom: 10px;
         }
-        
+
     }
 
     .search-focused .site-header-inner .row-4 .mod-mini-search-body .ems-form-inner .text > input {
@@ -350,7 +449,7 @@
                     margin-bottom: 50px;
                 }
             }
-            
+
             .easy-selection {
                 top: 50px;
                 padding-left: 270px;
@@ -392,14 +491,14 @@
                     }
                 }
         }
-        
+
     }
     .search-fixed-ready {
         .site-header-inner .row-4 .mod-mini-search-body .ems-form-inner {
             .text {
                 input {
                     padding-left: 0;
-                    padding-right: 0; 
+                    padding-right: 0;
                     font-size: 15px;
                 }
             }
@@ -414,6 +513,7 @@
             .submit {
                 left: auto;
                 right: 0;
+                top:0 !important;
             }
         }
     }
@@ -427,7 +527,7 @@
             }
         }
     }
-    
+
     .mSearchBtn{
         display: inline-block !important;
         position: absolute;
