--- a/test/src/arcelik-test-scss/style.css
+++ b/test/src/arcelik-test-scss/style.css
@@ -8634,13 +8634,12 @@ body .ui-datepicker table {
   .ems-prd-list .paroKampanyaAd .desc > b {
     font-family: "arial";
     font-size: 11px;
-    /*color: #9d6948;*/
     color: #333333;
     font-weight: 700;
     /*letter-spacing: 2px;*/
     letter-spacing: .6px; }
     .ems-prd-list .paroKampanyaAd .desc > b > .paroFiyat {
-      /*color: #ed1c24;*/
+      color: #ED1C24;
       font-family: "Gotham";
       font-weight: 500; }
   .ems-prd-list .paroKampanyaAd .paro-icon1 {
@@ -10134,6 +10133,8 @@ a.btn-all-technology {
       width: 100%; }
   .popupTaksit .gridTaksitBanka .gridTaksitSecenek .taksit-vade {
     background: #f9f9a9; }
+  .popupTaksit .gridTaksitBanka .gridTaksitSecenek .taksit-vade.taksit-kurumsal td:after {
+    display: none !important; }
   .popupTaksit .gridTaksitBanka .gridTaksitSecenek th, .popupTaksit .gridTaksitBanka .gridTaksitSecenek td {
     position: relative;
     padding: 15px 10px;
@@ -12572,6 +12573,9 @@ form[name="frmBorusanLojistik"] > br {
   font-family: "Heron";
   font-size: 23px;
   margin-bottom: 35px; }
+
+.ems-page-cart .cart-section-left .prom_indtutar {
+  display: none !important; }
 
 .cart-empty-body .ems-page-cart .row-holder-1 {
   max-width: none; }
@@ -15292,6 +15296,89 @@ a.contact724 {
   .tv-yazilim-indirme .softwareHolder table th, .tv-yazilim-indirme .softwareHolder table td {
     text-align: left; } }
 
+/* Search Revize Başlangıç */
+.button__text {
+  margin: 10px 10px 0px 10px;
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  border: 3px solid #ED1C24;
+  background: #ED1C24;
+  padding: 11px 20px;
+  font-family: "Heron";
+  font-size: 12px;
+  color: #fff;
+  font-weight: 700;
+  line-height: 1;
+  text-align: center;
+  text-decoration: none;
+  -webkit-transition: all 0.32s ease;
+  -o-transition: all 0.32s ease;
+  transition: all 0.32s ease; }
+
+svg.button__spinner {
+  display: none; }
+
+.js-search-load-more.loading svg.button__spinner {
+  display: block;
+  background-repeat: no-repeat !important;
+  z-index: 9999;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.8);
+  background-image: url("https://www.arcelik.com.tr/images/ajaxtabs/loading.gif");
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-size: auto;
+  background-position: center; }
+
+.search-results__inner .search-no-result {
+  font-size: 20px;
+  border: 1px solid red;
+  color: red; }
+
+.search-focused .search-results {
+  display: block; }
+
+.search-results {
+  display: none; }
+
+.search-results__category:nth-child(2) .search-results__category__list__image {
+  border: inherit;
+  padding: 0px; }
+
+.search-results__category {
+  padding: 20px 30px; }
+  .search-results__category .search-results__category__header span {
+    display: inline-block;
+    font-size: 16px;
+    color: #666; }
+  .search-results__category .search-results__category__list__wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    border-bottom: 1px solid #ddd;
+    padding: 10px; }
+    .search-results__category .search-results__category__list__wrapper:hover {
+      background: #ddd; }
+  .search-results__category .search-results__category__list__image {
+    border: 1px solid #ddd;
+    padding: 5px; }
+  .search-results__category .search-results__category__list__content {
+    margin-left: 10px; }
+    .search-results__category .search-results__category__list__content h5 {
+      font-size: 20px;
+      font-weight: bold; }
+    .search-results__category .search-results__category__list__content p {
+      display: none !important; }
+
+/* Search Revize Bitiş */
 .mod-mini-search {
   float: right;
   min-width: 275px; }
@@ -15315,7 +15402,7 @@ a.contact724 {
           border-color: #e9e9e9; }
       .mod-mini-search-body .ems-form-inner .submit {
         position: absolute;
-        bottom: 0;
+        top: 0;
         right: 0;
         pointer-events: none; }
         .mod-mini-search-body .ems-form-inner .submit a.btnArama {
@@ -15589,7 +15676,8 @@ a.contact724 {
     padding-left: 20px; }
   .search-focused .site-header-inner .row-4 .mod-mini-search-body .ems-form-inner .submit {
     left: auto;
-    right: 0; }
+    right: 0;
+    top: 0 !important; }
   .search-keyup.search-no-result .mod-mini-search-body .ems-form-inner:after {
     padding-left: 20px; }
   .mSearchBtn {
@@ -16404,20 +16492,23 @@ a.contact724 {
 
 .page-buying-guide .band-items {
   background: #fff; }
+  .page-buying-guide .band-items .sld-pager {
+    display: none; }
 
-.page-buying-guide .buying-accordion li span:after {
-  background-image: none !important; }
-
-.page-buying-guide .buying-accordion li span .acc-icon {
-  left: 0px;
-  position: absolute;
-  width: 32px;
-  height: 32px;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-  background-size: cover; }
+.page-buying-guide .buying-accordion li {
+  cursor: pointer; }
+  .page-buying-guide .buying-accordion li span:after {
+    background-image: none !important; }
+  .page-buying-guide .buying-accordion li span .acc-icon {
+    left: 0px;
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    background-size: cover; }
 
 .page-buying-guide .buying-accordion .acc-content {
   padding: 40px 0px; }
@@ -16500,6 +16591,11 @@ a.contact724 {
       width: 100%; }
 
 @media screen and (max-width: 426px) {
+  .page-buying-guide .buying-guide-icons {
+    height: 350px; }
+  .page-buying-guide .band-items .sld-pager {
+    display: block;
+    color: #ED1C24; }
   .page-buying-guide .buying-accordion .acc-content {
     padding: 20px; }
   .page-buying-guide .buying-video {
