--- a/test/src/arcelik-test-scss/style.css
+++ b/test/src/arcelik-test-scss/style.css
@@ -15297,24 +15297,37 @@ a.contact724 {
     text-align: left; } }
 
 /* Search Revize Başlangıç */
+/* İçerik Sonuçları Page */
+.tableTitleAramaIcerik, .pageDescAramaIcerik, .pageHeaderAramaIcerik {
+  display: none; }
+
+.AramaIcerikMain {
+  padding: 10px 20px;
+  border: 1px solid #ebebeb;
+  font-family: Gotham; }
+  .AramaIcerikMain .AramaIcerikMain_item {
+    margin: 20px 0px;
+    padding: 10px; }
+    .AramaIcerikMain .AramaIcerikMain_item .AramaIcerikMain_resim {
+      display: none; }
+    .AramaIcerikMain .AramaIcerikMain_item .AramaIcerikMain_baslik {
+      font-size: 15px;
+      font-weight: bold;
+      text-align: left;
+      color: #666666; }
+    .AramaIcerikMain .AramaIcerikMain_item .AramaIcerikMain_url {
+      display: none; }
+
+/* İçerik Sonuçları Page Bitiş. */
 .button__text {
-  margin: 10px 10px 0px 10px;
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-  border: 3px solid #ED1C24;
-  background: #ED1C24;
-  padding: 11px 20px;
-  font-family: "Heron";
-  font-size: 12px;
-  color: #fff;
-  font-weight: 700;
-  line-height: 1;
-  text-align: center;
-  text-decoration: none;
-  -webkit-transition: all 0.32s ease;
-  -o-transition: all 0.32s ease;
-  transition: all 0.32s ease; }
+  color: #666;
+  padding-left: 10px;
+  font-size: 9px;
+  font-weight: bold;
+  line-height: 2.22;
+  text-align: left;
+  letter-spacing: normal;
+  font-family: Gotham; }
 
 svg.button__spinner {
   display: none; }
@@ -15336,25 +15349,35 @@ svg.button__spinner {
   background-position: center; }
 
 .search-results__inner .search-no-result {
-  font-size: 20px;
-  border: 1px solid red;
-  color: red; }
+  display: block;
+  padding: 20px;
+  font-size: 20px; }
 
 .search-focused .search-results {
+  font-family: Gotham;
   display: block; }
 
 .search-results {
   display: none; }
 
+.search-results__category:nth-child(2) .search-results__category__list a {
+  display: block; }
+  .search-results__category:nth-child(2) .search-results__category__list a .search-results__category__list__wrapper {
+    padding: 0px !important; }
+
 .search-results__category:nth-child(2) .search-results__category__list__image {
-  border: inherit;
-  padding: 0px; }
+  display: none; }
 
 .search-results__category {
-  padding: 20px 30px; }
+  padding: 20px 70px;
+  border-bottom: 1px solid #ddd; }
+  .search-results__category .search-results__category__list a {
+    display: inline-block;
+    margin-right: 40px; }
   .search-results__category .search-results__category__header span {
     display: inline-block;
-    font-size: 16px;
+    font-size: 11px;
+    padding-left: 10px;
     color: #666; }
   .search-results__category .search-results__category__list__wrapper {
     display: -webkit-box;
@@ -15363,18 +15386,19 @@ svg.button__spinner {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    border-bottom: 1px solid #ddd;
     padding: 10px; }
-    .search-results__category .search-results__category__list__wrapper:hover {
-      background: #ddd; }
   .search-results__category .search-results__category__list__image {
     border: 1px solid #ddd;
+    width: 90px;
     padding: 5px; }
+    .search-results__category .search-results__category__list__image img {
+      width: 100%; }
   .search-results__category .search-results__category__list__content {
     margin-left: 10px; }
     .search-results__category .search-results__category__list__content h5 {
-      font-size: 20px;
-      font-weight: bold; }
+      font-size: 15px;
+      font-weight: bold;
+      font-family: Gotham; }
     .search-results__category .search-results__category__list__content p {
       display: none !important; }
 
@@ -15654,6 +15678,9 @@ svg.button__spinner {
     display: none !important; } }
 
 @media screen and (max-width: 426px) {
+  .search-focused .search-results {
+    height: calc(100vh - 102px);
+    overflow: scroll; }
   .site-header-inner .row-4 {
     width: 100%;
     height: 48px;
